--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body style="margin: 0px; width: 100%; height: 100%;">
     <video width="320" height="240" controls>
-    <source src="https://vadapav.mov/f/e215911c-70b1-43bd-aa47-00eee1d1496f/" type="video/mkv">
+    <source src="https://v-cloud.bio/th3o9lc3klhb133" type="video/mkv">
     Your browser does not support the video tag.
     </video>
   </body>
