--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body style="margin: 0px; width: 100%; height: 100%;">
-    <iframe src="https://drive.google.com/file/d/1l9LCkruaADmk3W8_IZaAhB_yuC9PLHnz/view?usp=drive_link" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+    <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://drive.google.com/file/d/1l9LCkruaADmk3W8_IZaAhB_yuC9PLHnz/preview" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
   </body>
 </html>
