--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body style="margin: 0px; width: 100%; height: 100%; background-color: black;">
+  <body style="margin: 0px; width: 100%; height: 100%; background-color: black; overflow: hidden;">
     <iframe src="https://drive.google.com/file/d/1l9LCkruaADmk3W8_IZaAhB_yuC9PLHnz/preview" width="100%" height="100%" allow="autoplay"></iframe>  
   </body>
 </html>
