--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body style="margin: 0px; width: 100%; height: 100%; background-color: black; overflow: hidden;">
-    <iframe src="https://new.gdtot.dad/file/2531345751" width="100%" height="100%" allow="autoplay"></iframe>  
+    <iframe src="https://edytjedhgmdhm.abfhaqrhbnf.workers.dev/movies/Megamind%20%282010%29/Megamind.2010.1080p.BluRay.x264-SECTOR7.mkv" width="100%" height="100%" allow="autoplay"></iframe>  
   </body>
 </html>
